--- a/Week 3/HW3.2.ipynb
+++ b/Week 3/HW3.2.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T04:24:10.377935Z",
@@ -408,7 +408,7 @@
        "Text(0.5, 1.0, 'Loss vs. alpha using Ridge')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "part of the training data is used for validation or to find the best alpha. "
+    "part of the training data is used for validation or to find the best alpha. We cannot use the test data to find the best alpha because we are going to use the test data to test the model after finding the best alpha"
    ]
   },
   {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T04:24:28.395933Z",
@@ -477,7 +477,7 @@
        "5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T04:25:19.025512Z",
@@ -522,15 +522,13 @@
     "          'Valid length', len(valid_index),'Valid index:',valid_index[0:5])\n",
     "    mse = []\n",
     "    for a in avalues:\n",
-    "        fill in your own code here"
+    "        steps = [('poly', PolynomialFeatures(degree=3)),\n",
+    "                 ('rescale', MinMaxScaler()),\n",
+    "                 ('lr', Ridge(alpha=a, max_iter=100000))]\n",
+    "        model = Pipeline(steps)\n",
+    "        model = model.fit(X_train, y_train)\n",
+    "        mse.append(mean_squared_error(y_valid, model.predict(X_valid)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -542,7 +540,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "idk"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-08T05:07:05.842214Z",
@@ -572,18 +572,81 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "avalues=list(np.logspace(-3, 3, 13))\n",
-    "tuned_parameters = [{'lr__alpha':avalues,'poly__degree':range(1,10)}]\n",
-    "my_mse = make_scorer(mean_squared_error, greater_is_better=False)\n",
-    "\n",
-    "\n"
+    "tuned_parameters = [{'ridge__alpha':avalues,'poly__degree':range(1,10)}]\n",
+    "my_mse = make_scorer(mean_squared_error, greater_is_better=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "steps = [('poly', PolynomialFeatures(degree=30)),\n",
+    "         ('rescale', MinMaxScaler()),\n",
+    "         ('ridge', Ridge())]\n",
+    "pipeline = Pipeline(steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = GridSearchCV(pipeline, tuned_parameters, scoring=my_mse, cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10,\n",
+       "             estimator=Pipeline(steps=[('poly', PolynomialFeatures(degree=30)),\n",
+       "                                       ('rescale', MinMaxScaler()),\n",
+       "                                       ('ridge', Ridge())]),\n",
+       "             param_grid=[{'poly__degree': range(1, 10),\n",
+       "                          'ridge__alpha': [0.001, 0.0031622776601683794, 0.01,\n",
+       "                                           0.03162277660168379, 0.1,\n",
+       "                                           0.31622776601683794, 1.0,\n",
+       "                                           3.1622776601683795, 10.0,\n",
+       "                                           31.622776601683793, 100.0,\n",
+       "                                           316.22776601683796, 1000.0]}],\n",
+       "             scoring=make_scorer(mean_squared_error, greater_is_better=False))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'poly__degree': 3, 'ridge__alpha': 0.03162277660168379}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
   }
  ],
  "metadata": {
